estilos y mejoras al manejo de la youtube API

--- a/css/style.css
+++ b/css/style.css
@@ -90,20 +90,18 @@
   /* grid de peliculas */
   .grid {
     display: grid;
-    grid-template-columns: 3fr 1fr;
-    grid-auto-rows:minmax(200px, 200px);
-    column-gap: 0.5em;
-    row-gap: 1em;
+    grid-template-columns: 1fr 1fr 1fr ;
+    grid-template-rows: 1fr 1fr 1fr 1fr ;
+    column-gap: 0.3em;
+    row-gap: 0.3em;
   }
   
 
   /* grid configuration */
   .grid .cell{
-    background-color: #ecf0f1;
-    border: none;
-    border-radius: 3px;
-    display: block; 
-    
+    border: 3px solid ;
+    border-radius: 5px;
+   
   }
   
   .cell:hover{
@@ -112,13 +110,20 @@
   }
   
   .grid .cell .video {
-    height: 90%;
-    background-color: rgb(143, 185, 185);
-    
+    background-color: rgba(143, 185, 185, 0.489);
+    border-radius: 5px;
+  }
+  
+  .grid .cell .video .img {
+    height: 90%; 
+    width: auto;
   }
   
   .grid .cell .title-video {
     text-align: center;
+    padding: 0px 0px;
+    background-color:transparent ;
+    color:antiquewhite;
   }
 
   .grid .cell .title-video:hover {
@@ -128,14 +133,39 @@
   }
   
   .grid .cell{
-    grid-column: 2/3;
+    grid-column: 3/4;
   }
 
-  .grid .selected{
+  .grid .cell-ppal{
     grid-row: 1/3;
-    grid-column: 1/2;
+    grid-column: 1/3;
+    border-color: aqua;
+    border-width: 5px;
+    border-style:inset;
+  
+  }
+  
+  .grid .video {
+    height: 100%; 
+    width: 100%;
+    text-align: center;
+  }
+  
+  .grid .cell-ppal .video-player{
+     /* height: 100vw; */
+    width: 100%;
+  }
+  
+  .grid .cell-ppal .title-video{
+    font-size: 2rem;
+    text-align: center;
+    color: antiquewhite;
   }
 
-  .grid .selected  .title-video{
-    font-size: 2rem;
+  .footer{
+    color: bisque;
+    text-align: center;
   }
+
+
+  
